# crates/server/src/http/openapi.rs
@@ -75,6 +75,11 @@ use super::{
         photos::list_photos,
         photos::get_photo,
         photos::patch_photo,
+        super::view_candidates::list_candidates,
+        super::view_candidates::create_candidate,
+        super::view_candidates::dismiss_candidate,
+        super::view_candidates::restore_candidate,
+        super::view_candidates::arrange_photos,
         assets::upload_asset,
         assets::get_asset_content,
         preparations::create_preparation,
@@ -101,6 +106,11 @@ use super::{
         releases::export_release,
     ),
     components(schemas(
+        super::view_candidates::ViewCandidateDto,
+        super::view_candidates::ViewCandidateListResponse,
+        super::view_candidates::ViewCandidateResponse,
+        super::view_candidates::ViewCandidateCreateRequest,
+        super::view_candidates::PhotoArrangementRequest,
         ApiErrorResponse,
         ApiErrorBody,
         HealthLiveResponse,
